--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-paper": "^5.10.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1"
   },
